# mcp-dify-knowledge

./: .gitignore  README.md  pyproject.toml
src/mcp_dify_knowledge/: __init__.py  __main__.py
